--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,6 +42,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="TurnHorizontal",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="TurnVertical",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
