Rough completion of demo

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,14 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=FAF1B8FD49D2ED32CE7A40B8E660B68A
+CompanyName=Quixel AB
+Homepage=www.quixel.se
+ProjectID=4947A6314044D7C69CA6C895228B3C1D
+ProjectName=
 
-[StartupActions]
-bAddPacks=True
-InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path=)
+FullRebuild=True
+ForDistribution=False
+UsePakFile=True
+
+
