--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,17 +1,14 @@
 [URL]
-[/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+GameName=SciFiHallway
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/MainMap
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameDefaultMap=/Game/Maps/MainMap
 GlobalDefaultGameMode=/Game/Blueprints/LightAdventureGameMode_BP.LightAdventureGameMode_BP_C
-
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-AppliedTargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Maximum
-AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
