--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,12 +2,12 @@
 GameName=SciFiHallway
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/MainMap
+EditorStartupMap=/Game/Maps/Sandbox.Sandbox
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/Maps/MainMap
+GameDefaultMap=/Game/Maps/Sandbox.Sandbox
 GlobalDefaultGameMode=/Game/Blueprints/LightAdventureGameMode_BP.LightAdventureGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
@@ -52,5 +52,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
